--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/Onigmo/vendor"]
-    path = vendor/Onigmo/vendor
-    url = https://github.com/textmate/Onigmo.git
+[submodule "vendor/textmate"]
+	path = vendor/textmate
+	url = git@github.com:dahakawang/textmate.git
