build a run executable to test

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,10 @@ SOURCE=$(shell ls *.cc)
 OBJECTS=$(SOURCE:.cc=.o)
 
 all:$(OBJECTS)
+	$(CC) $(CFLAGS) $(LIB_PATH) $(LIBS) $(OBJECTS) -o run
 
 $(OBJECTS): %.o: %.cc
-	$(CC) -c $(CFLAGS) $(INCLUDE_PATH) $(LIB_PATH) $< -o $@
+	$(CC) -c $(CFLAGS) $(INCLUDE_PATH) $< -o $@
 
 clean:
 	rm *.o
