--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/json-parser"]
 	path = vendor/json-parser
 	url = https://github.com/dahakawang/json-parser.git
+[submodule "vendor/utf8-cpp"]
+	path = vendor/utf8-cpp
+	url = https://github.com/dahakawang/uft8-cpp.git
