change the order of objects

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ SOURCE=$(shell ls *.cc)
 OBJECTS=$(SOURCE:.cc=.o)
 
 all:$(OBJECTS)
-	$(CC) $(CFLAGS) $(LIB_PATH) $(LIBS) $(OBJECTS) -o run
+	$(CC) $(CFLAGS) $(LIB_PATH) $(OBJECTS) $(LIBS) -o run
 
 $(OBJECTS): %.o: %.cc
 	$(CC) -c $(CFLAGS) $(INCLUDE_PATH) $< -o $@
