add the syntastic plugin

--- a/.syntastic_cpp_config
+++ b/.syntastic_cpp_config
@@ -1,2 +1,3 @@
 -I /Users/david/work/Project/SharpHighlighter/vendor/utf8-cpp/source
 -I /Users/david/work/Project/SharpHighlighter/vendor/json-parser
+-I /Users/david/work/Project/SharpHighlighter/vendor/Onigmo
