buid a archive file

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,10 +3,12 @@ SOURCE=$(shell ls *.cc)
 OBJECTS=$(SOURCE:.cc=.o)
 
 all:$(OBJECTS)
-	$(CC) $(CFLAGS) $(LIB_PATH) $(OBJECTS) $(LIBS) -o run
+	mkdir -p $(ROOT)/lib
+	$(AR) rcs $(ROOT)/lib/libshl.a $(OBJECTS)
 
 $(OBJECTS): %.o: %.cc
 	$(CC) -c $(CFLAGS) $(INCLUDE_PATH) $< -o $@
 
 clean:
+	rm $(ROOT)/lib/libshl.a
 	rm *.o
