move the main catch to a separate file

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,11 +1,14 @@
 
-SOURCE=$(shell ls *.cc)
+SOURCE=$(filter-out catch_main.cc, $(shell ls *.cc))
 TARGETS=$(SOURCE:.cc=)
 
 all:$(TARGETS)
 
-$(TARGETS): %: %.cc
-	$(CC) $(CFLAGS) -I$(ROOT)/src $(INCLUDE_PATH) -L$(ROOT)/lib $(LIB_PATH) $< -lshl $(LIBS) -o $@.run
+$(TARGETS): %: %.cc catch_main.o
+	$(CC) $(CFLAGS) -I$(ROOT)/src $(INCLUDE_PATH) -L$(ROOT)/lib $(LIB_PATH) $< -lshl catch_main.o $(LIBS) -o $@.run
+
+catch_main.o: catch_main.cc
+	$(CC) -c $(CFLAGS) -I$(ROOT)/src $(INCLUDE_PATH) catch_main.cc -o catch_main.o
 
 clean:
 	-rm *.run
