--- a/src/Makefile
+++ b/src/Makefile
@@ -2,13 +2,15 @@
 SOURCE=$(shell ls *.cc)
 OBJECTS=$(SOURCE:.cc=.o)
 
-all:$(OBJECTS)
-	mkdir -p $(ROOT)/lib
+all: $(ROOT)/lib/libshl.a
+
+$(ROOT)/lib/libshl.a: $(OBJECTS)
+	-@mkdir -p $(ROOT)/lib
 	$(AR) rcs $(ROOT)/lib/libshl.a $(OBJECTS)
 
 $(OBJECTS): %.o: %.cc
 	$(CC) -c $(CFLAGS) $(INCLUDE_PATH) $< -o $@
 
 clean:
-	rm $(ROOT)/lib/libshl.a
-	rm *.o
+	-rm $(ROOT)/lib/libshl.a
+	-rm *.o
