all test now has a dependency on libshl.a

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,7 @@ TARGETS=$(SOURCE:.cc=.run)
 
 all:$(TARGETS)
 
-$(TARGETS): %.run: %.cc catch_main.o
+$(TARGETS): %.run: %.cc catch_main.o $(ROOT)/lib/libshl.a
 	$(CC) $(CFLAGS) -I$(ROOT)/src $(INCLUDE_PATH) -L$(ROOT)/lib $(LIB_PATH) $< -lshl catch_main.o $(LIBS) -o $@
 
 catch_main.o: catch_main.cc
