make it compilable

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,11 @@
+TARGET=misc scope core view
 
-SOURCE=$(shell ls *.cc)
-OBJECTS=$(SOURCE:.cc=.o)
-
-all: $(ROOT)/lib/libshl.a
-
-$(ROOT)/lib/libshl.a: $(OBJECTS)
-	-@mkdir -p $(ROOT)/lib
-	$(AR) rcs $(ROOT)/lib/libshl.a $(OBJECTS)
-
-$(OBJECTS): %.o: %.cc
-	$(CC) -c $(CFLAGS) $(INCLUDE_PATH) $< -o $@
+all:
+	@for target in $(TARGET); do \
+		(cd $$target; make all); \
+	done
 
 clean:
-	-rm $(ROOT)/lib/libshl.a
-	-rm *.o
+	@for target in $(TARGET); do \
+		(cd $$target; make clean); \
+	done
